k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: room-service
spec:
  selector:
    app: room
  ports:
    # - protocol: TCP
    - port: 80 # service port
      targetPort: 3001 # deployment port
  type: LoadBalancer
  # ClusterIP (default) or NodePort
